fix section gap

--- a/css/components/info.css
+++ b/css/components/info.css
@@ -14,7 +14,7 @@
   font-weight: 700;
   font-size: 3.5em;
   color: #AF8989;
-  margin: 30vh 0 0 5vh;
+  margin: 0 0 0 5vh;
   padding-top: 10vh;
 }
 
